--- a/css/style.css
+++ b/css/style.css
@@ -72,6 +72,14 @@ hr {
 	margin-top: 24px;
 }
 
+#forrest1{
+	bottom: 104px;
+}
+
+.git{
+	font-size: xx-large;
+}
+
 .bullet{
 	font-size: 16px;
 }
