--- a/css/style.css
+++ b/css/style.css
@@ -96,20 +96,19 @@ hr {
     z-index: -1;
 }
 
-	.parallax img {
-		max-width: 50%;
-        max-height: auto;
-		bottom: -20%;
-		right: 1000px !important;
-        height: auto;
-        min-width: 100px;/*Note the px*/
-        min-height: 100%;
-
-	-webkit-transform: translate3d(0, 0, 0);
-			transform: translate3d(0, 0, 0);
-	-webkit-transform: translateX(-50%);
-			transform: translateX(-50%);
-	}
+.parallax img {
+    max-width: 102%;
+    max-height: auto;
+    bottom: -20%;
+    /* right: 00px !important; */
+    height: auto;
+    min-width: 1000px !important;
+    min-height: 100%;
+    -webkit-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+    -webkit-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
 
   .parallax-container .section {
     width: 100%;
