--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,11 @@ a{
 	font-weight: bold;
 }
 
+#project-title{
+	font-weight: bold;
+	margin-bottom: 60px;
+}
+
 .img-icon{
 	display: block;
 	margin-left: auto;
@@ -55,9 +60,8 @@ a{
 }
 
 hr {
-	width: 1100px;
-    margin-left: 0px;
-	margin-top: 60px;
+	width: 75vw;
+    margin: auto;
 }
 
 #umg-text{
@@ -88,16 +92,30 @@ hr {
 
 #pen-img {
     height: 200px;
-	margin-top: 49px;
+	margin-top: 20px;
 }
 
 #food-img{
 	height: 200px;
 	margin-top: 37px;
 }
-
+/*
+#forrest{
+	min-height: 100vh;
+	min-width: 100vw
+}
+*/
 #forrest1{
 	bottom: 104px;
+}
+
+@media only screen and (max-width : 480px) {
+	#umg-img{
+		height: 29vw;
+	}
+	#fort-img{
+		height: 19vw;
+	}
 }
 
 @media only screen and (max-width : 600px) {
