--- a/css/style.css
+++ b/css/style.css
@@ -5,22 +5,12 @@
  *
  * Made By MaterializeCSS.com
  */
- 
- html, body {
-    max-width: 100%;
-    overflow-x: hidden;
-}
+
 
 ul:not(.browser-default) > li {
      list-style-type: disc; 
 }
 
-nav ul a,
-nav .brand-logo {
-  color: black;
-  width: 100000px;
-  height 100000px;
-}
 
 p {
   line-height: 2rem;
@@ -36,6 +26,7 @@ a{
 
 #title {
 	font-weight: bold;
+	margin: auto;
 }
 
 #project-title{
@@ -47,6 +38,10 @@ a{
 	display: block;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+#title-container{
+	margin-top: -20px;
 }
 
 #logo{
@@ -63,6 +58,96 @@ hr {
 	width: 75vw;
     margin: auto;
 }
+
+.crop {
+    height: 100vh;
+    overflow: hidden;
+}
+
+.crop .landing-img {
+	height: 100vh;
+	vertical-align: bottom;
+	position: relative;
+	object-fit: cover;
+}
+
+@media(min-width: 1350px){
+	.crop {
+		height: 100vh;
+		overflow: hidden;
+	}
+	
+	.crop .landing-img {
+		width: 100%;
+		vertical-align: bottom;
+		position: relative;
+	}
+}
+
+.title-div{
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	margin: auto;
+	margin-top: 250px;
+}
+
+.landing-button{
+	position: relative;
+	display: block;
+	text-align: center;
+	border-style: solid;
+    border-width: 3px;
+	border-color: black;
+	background-color: Transparent;
+	margin: auto;
+	margin-top: 25px;
+    width: 200px;
+	height: 41px;
+	font-size: 1.2rem;
+	font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+.landing-button:focus {
+	outline:0;
+}
+
+.landing-a{
+	color: black;
+}
+
+.rotate{
+	transform: rotateZ(90deg);
+	transition: all 0.4s ease;
+}
+
+.unrotate{
+	transform: rotateZ(0deg);
+	transition: all 0.4s ease;
+}
+
+.white-fade{
+	transition: all 0.4s ease;
+	border-color: white;
+	background-color: white;
+}
+
+.white-unfade{
+	transition: all 0.4s ease;
+	border-color: black;
+	background-color: transparent;
+}
+
+.white-text{
+	color: white !important;
+}
+
+.landing-arrow{
+	margin-left: 15px;
+}
+
 
 #umg-text{
 	margin-top: 0px;
@@ -167,16 +252,36 @@ hr {
 	font-size: 16px;
 }
 
+.title-type{
+	margin-top: 10px;
+}
+
  #type{
-	color: white;
+	color: black;
  }
  
  .typed-cursor{
-	 color: white;
+	 color: black;
  }
 .parallax-container {
     height: 600px !important;
     z-index: -1;
+}
+
+.work{
+	background-color: var(--light2);
+}
+
+.icon-section{
+
+}
+
+#work-header{
+	margin-top: 30px;
+}
+
+#work-expr-section{
+	min-height: 100vh;
 }
 
 .work-experience-para-cont{
@@ -220,15 +325,6 @@ hr {
     position: absolute;
     top: 40%;
   }
-  #index-banner .section {
-    top: 10%;
-  }
-}
-
-@media only screen and (max-width : 600px) {
-  #index-banner .section {
-    top: 0;
-  }
 }
 
 .icon-block {
@@ -241,6 +337,8 @@ hr {
 footer.page-footer {
   margin: 0;
 }
+
+
 
 
 
