--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -6124,6 +6124,10 @@ body.modal-open {
   float: left;
 }
 
+.food-map{
+  max-height: 382.5px;
+}
+
 .resume-btn {
   width: 364px;
   font-size: 1.5rem !important;
